# bazel_version_utils

./: .bazelrc  .bazelrc.ci  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MODULE.bazel  README.md
.bcr/: metadata.template.json
.github/workflows/: ci.yaml  pre-commit.yaml  publish-to-bcr.yaml  release.yaml  release_prep.sh  tag.yaml
.pre-commit-hooks/: bazel-test-all.sh
docs/: .bazelrc  .bazelrc.ci  BUILD.bazel  MODULE.bazel  README.md
docs/spec/: BUILD.bazel  spec.md
docs/spec/internal/: BUILD.bazel  clauses.md  npm.md  simple.md
docs/version/: BUILD.bazel  pgver.md  semver.md  version.md
examples/: MODULE.bazel  README.md  suite.bzl
examples/foo/: BUILD.bazel  foo.bzl
examples/spec/: BUILD.bazel  spec.bzl
examples/version/: BUILD.bazel  pgver.bzl  semver.bzl
spec/: BUILD.bazel  spec.bzl
spec/internal/: BUILD.bazel  clauses.bzl  npm.bzl  simple.bzl  utils.bzl
tests/: BUILD.bazel  dummy_test.sh
tests/spec/: BUILD.bazel  npm_server.bzl  spec.bzl  spec_npm.bzl  spec_simple.bzl  spec_simple_pgver.bzl  spec_simple_semver.bzl
tests/spec/internal/: BUILD.bazel  clauses.bzl
tests/version/: BUILD.bazel  pgver.bzl  semver.bzl  semver_parsing.bzl  semver_specification.bzl  version_pgver.bzl  version_semver.bzl
tests/version/internal/: BUILD.bazel  utils.bzl
version/: BUILD.bazel  pgver.bzl  semver.bzl  version.bzl  versions.bzl
version/internal/: BUILD.bazel  bumping.bzl  comparing.bzl  truncating.bzl  utils.bzl
