load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = ["//visibility:public"])

exports_files([
    "semver.bzl",
    "version.bzl",
])

bzl_library(
    name = "semver",
    srcs = ["semver.bzl"],
    deps = [
        "//version/internal:bumping",
        "//version/internal:comparing",
        "//version/internal:truncating",
        "//version/internal:utils",
    ],
)

bzl_library(
    name = "version",
    srcs = ["version.bzl"],
    deps = [
        ":semver",
    ],
)
