load("@aspect_bazel_lib//lib:docs.bzl", "stardoc_with_diff_test", "update_docs")

package(default_visibility = ["//:__subpackages__"])

stardoc_with_diff_test(
    name = "semver",
    bzl_library_target = "@version_utils//version:semver",
    renderer = "//:renderer",
)

stardoc_with_diff_test(
    name = "version",
    bzl_library_target = "@version_utils//version:version",
    renderer = "//:renderer",
)

update_docs(name = "update")
