load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

package(default_visibility = [
    "//docs/spec/internal:__pkg__",
    "//spec:__pkg__",
    "//tests/spec/internal:__pkg__",
])

exports_files([
    "clauses.bzl",
    "npm.bzl",
    "simple.bzl",
])

bzl_library(
    name = "clauses",
    srcs = ["clauses.bzl"],
    deps = [
        "//version:semver",
    ],
)

bzl_library(
    name = "simple",
    srcs = ["simple.bzl"],
    deps = [
        ":clauses",
        "//version:semver",
    ],
)

bzl_library(
    name = "npm",
    srcs = ["npm.bzl"],
    deps = [
        ":clauses",
        ":simple",
        "//version:semver",
    ],
)
