load(":semver_parsing.bzl", semver_parsing_test_suite = "test_suite")
load(":semver_specification.bzl", semver_specification_test_suite = "test_suite")
load(":version_pgver.bzl", version_pgver_test_suite = "test_suite")
load(":version_semver.bzl", version_semver_test_suite = "test_suite")

semver_parsing_test_suite()

semver_specification_test_suite()

version_pgver_test_suite()

version_semver_test_suite()
